--- a/src/main/resources/assets/fancydecorativeblocks/lang/en_us.json
+++ b/src/main/resources/assets/fancydecorativeblocks/lang/en_us.json
@@ -1,7 +1,7 @@
 {
   "block.fancydecorativeblocks.electrolamp": "Electro Lamp(WIP)",
   "item.fancydecorativeblocks.electrolamp": "Electro Lamp(WIP)",
-  "block.fancydecorativeblocks.glass_stairs": "Glass Stairs",
-  "item.fancydecorativeblocks.glass_stairs": "Glass Stairs",
+  "block.fancydecorativeblocks.wood_crate": "Wood Crate",
+  "item.fancydecorativeblocks.wood_crate": "Wood Crate",
   "itemGroup.fancydecorativeblocks": "Fancy Decorative Blocks"
 }
