--- a/src/main/resources/assets/fancydecorativeblocks/lang/ru_ru.json
+++ b/src/main/resources/assets/fancydecorativeblocks/lang/ru_ru.json
@@ -1,7 +1,7 @@
 {
   "block.fancydecorativeblocks.electrolamp": "Электро Лампа(WIP)",
   "item.fancydecorativeblocks.electrolamp": "Электро Лампа(WIP)",
-  "block.fancydecorativeblocks.glass_stairs": "Ступенки Из Стекла",
-  "item.fancydecorativeblocks.glass_stairs": "Ступенки Из Стекла",
+  "block.fancydecorativeblocks.wood_crate": "Деревянный Ящик",
+  "item.fancydecorativeblocks.wood_crate": "Деревянный Ящик",
   "itemGroup.fancydecorativeblocks": "Fancy Decorative Blocks"
 }
