--- a/src/main/resources/assets/fancydecorativeblocks/lang/ru_ru.json
+++ b/src/main/resources/assets/fancydecorativeblocks/lang/ru_ru.json
@@ -7,5 +7,7 @@
   "item.fancydecorativeblocks.cobblestone_small_tiles": "Булыжник(мелкая плитка)",
   "block.fancydecorativeblocks.cobblestone_hexagon": "Булыжник(Шестиугольгик)",
   "item.fancydecorativeblocks.cobblestone_hexagon": "Булыжник(Шестиугольгик)",
+  "block.fancydecorativeblocks.polished_cobblestone": "Полированый Булыжнык",
+  "item.fancydecorativeblocks.polished_cobblestone": "Полированый Булыжнык",
   "itemGroup.fancydecorativeblocks": "Fancy Decorative Blocks"
 }
