--- a/src/main/resources/assets/fancydecorativeblocks/lang/ru_ru.json
+++ b/src/main/resources/assets/fancydecorativeblocks/lang/ru_ru.json
@@ -1,8 +1,20 @@
 {
   "block.fancydecorativeblocks.electrolamp": "Электро Лампа(WIP)",
   "item.fancydecorativeblocks.electrolamp": "Электро Лампа(WIP)",
-  "block.fancydecorativeblocks.wood_crate": "Деревянный Ящик(WIP)",
-  "item.fancydecorativeblocks.wood_crate": "Деревянный Ящик(WIP)",
+  "block.fancydecorativeblocks.crate_frame": "Каркас Ящика",
+  "item.fancydecorativeblocks.crate_frame": "Каркас Ящика",
+  "block.fancydecorativeblocks.wood_crate": "Деревянный Ящик",
+  "item.fancydecorativeblocks.wood_crate": "Деревянный Ящик",
+  "gui.fancydecorativeblocks.woodcrate": "Деревянный Ящик",
+  "block.fancydecorativeblocks.iron_crate": "Железный Ящик",
+  "item.fancydecorativeblocks.iron_crate": "Железный Ящик",
+  "gui.fancydecorativeblocks.ironcrate": "Железный Ящик",
+  "block.fancydecorativeblocks.copper_crate": "Медный Ящик",
+  "item.fancydecorativeblocks.copper_crate": "Медный Ящик",
+  "gui.fancydecorativeblocks.coppercrate": "Медный Ящик",
+  "block.fancydecorativeblocks.gold_crate": "Золотой Ящик",
+  "item.fancydecorativeblocks.gold_crate": "Золотой Ящик",
+  "gui.fancydecorativeblocks.goldcrate": "Золотой Ящик",
   "block.fancydecorativeblocks.cobblestone_small_tiles": "Булыжник(мелкая плитка)",
   "item.fancydecorativeblocks.cobblestone_small_tiles": "Булыжник(мелкая плитка)",
   "block.fancydecorativeblocks.cobblestone_hexagon": "Булыжник(Шестиугольгик)",
