--- a/src/main/resources/assets/fancydecorativeblocks/lang/en_us.json
+++ b/src/main/resources/assets/fancydecorativeblocks/lang/en_us.json
@@ -1,8 +1,20 @@
 {
   "block.fancydecorativeblocks.electrolamp": "Electro Lamp(WIP)",
   "item.fancydecorativeblocks.electrolamp": "Electro Lamp(WIP)",
-  "block.fancydecorativeblocks.wood_crate": "Wood Crate(WIP)",
-  "item.fancydecorativeblocks.wood_crate": "Wood Crate(WIP)",
+  "block.fancydecorativeblocks.crate_frame": "Crate Frame",
+  "item.fancydecorativeblocks.crate_frame": "Crate Frame",
+  "block.fancydecorativeblocks.wood_crate": "Wood Crate",
+  "item.fancydecorativeblocks.wood_crate": "Wood Crate",
+  "gui.fancydecorativeblocks.woodcrate": "Wood Crate",
+  "block.fancydecorativeblocks.iron_crate": "Iron Crate",
+  "item.fancydecorativeblocks.iron_crate": "Iron Crate",
+  "gui.fancydecorativeblocks.ironcrate": "Iron Crate",
+  "block.fancydecorativeblocks.copper_crate": "Copper Crate",
+  "item.fancydecorativeblocks.copper_crate": "Copper Crate",
+  "gui.fancydecorativeblocks.coppercrate": "Copper Crate",
+  "block.fancydecorativeblocks.gold_crate": "Gold Crate",
+  "item.fancydecorativeblocks.gold_crate": "Gold Crate",
+  "gui.fancydecorativeblocks.goldcrate": "Gold Crate",
   "block.fancydecorativeblocks.cobblestone_small_tiles": "Cobblestone(Small Tiles)",
   "item.fancydecorativeblocks.cobblestone_small_tiles": "Cobblestone(Small Tiles)",
   "block.fancydecorativeblocks.cobblestone_hexagon": "Cobblestone(Hexagon)",
