--- a/src/main/resources/assets/fancydecorativeblocks/lang/en_us.json
+++ b/src/main/resources/assets/fancydecorativeblocks/lang/en_us.json
@@ -15,6 +15,12 @@
   "block.fancydecorativeblocks.gold_crate": "Gold Crate",
   "item.fancydecorativeblocks.gold_crate": "Gold Crate",
   "gui.fancydecorativeblocks.goldcrate": "Gold Crate",
+  "block.fancydecorativeblocks.diamond_crate": "Diamond Crate",
+  "item.fancydecorativeblocks.diamond_crate": "Diamond Crate",
+  "gui.fancydecorativeblocks.diamondcrate": "Diamond Crate",
+  "block.fancydecorativeblocks.netherite_crate": "Netherite Crate",
+  "item.fancydecorativeblocks.netherite_crate": "Netherite Crate",
+  "gui.fancydecorativeblocks.netheritecrate": "Netherite Crate",
   "block.fancydecorativeblocks.cobblestone_small_tiles": "Cobblestone(Small Tiles)",
   "item.fancydecorativeblocks.cobblestone_small_tiles": "Cobblestone(Small Tiles)",
   "block.fancydecorativeblocks.cobblestone_hexagon": "Cobblestone(Hexagon)",
