--- a/src/main/resources/assets/fancydecorativeblocks/lang/ru_ru.json
+++ b/src/main/resources/assets/fancydecorativeblocks/lang/ru_ru.json
@@ -15,6 +15,12 @@
   "block.fancydecorativeblocks.gold_crate": "Золотой Ящик",
   "item.fancydecorativeblocks.gold_crate": "Золотой Ящик",
   "gui.fancydecorativeblocks.goldcrate": "Золотой Ящик",
+  "block.fancydecorativeblocks.diamond_crate": "Алмазный Ящик",
+  "item.fancydecorativeblocks.diamond_crate": "Алмазный Ящик",
+  "gui.fancydecorativeblocks.diamondcrate": "Алмазный Ящик",
+  "block.fancydecorativeblocks.netherite_crate": "Незеритовый Ящик",
+  "item.fancydecorativeblocks.netherite_crate": "Незеритовый Ящик",
+  "gui.fancydecorativeblocks.netheritecrate": "Незеритовый Ящик",
   "block.fancydecorativeblocks.cobblestone_small_tiles": "Булыжник(мелкая плитка)",
   "item.fancydecorativeblocks.cobblestone_small_tiles": "Булыжник(мелкая плитка)",
   "block.fancydecorativeblocks.cobblestone_hexagon": "Булыжник(Шестиугольгик)",
